# CroLens

./: .gitignore  README.md
crolens-api/: .dev.vars.example  Cargo.toml  README.md  package-lock.json  package.json  wrangler.integration.no-db.toml  wrangler.production.toml  wrangler.toml
crolens-api/.cargo/: config.toml
crolens-api/db/: migrate_request_logs_columns.sql  schema.sql  seed.sql
crolens-api/src/: abi.rs  error.rs  http.rs  lib.rs  types.rs
crolens-api/src/adapters/: mod.rs  uniswap_v2.rs
crolens-api/src/domain/: approval.rs  assets.rs  block.rs  calldata.rs  contract_info.rs  cro.rs  cronos_id.rs  defi.rs  gas.rs  gas_estimate.rs  health.rs  lending.rs  mod.rs  pool_info.rs  portfolio.rs  price.rs  protocol_stats.rs  revoke_approval.rs  search.rs  simulation.rs  swap.rs  swap_route.rs  tectonic.rs  token_approvals.rs  token_info.rs  transaction.rs  vvs.rs  whale_activity.rs
crolens-api/src/gateway/: auth.rs  billing.rs  mod.rs  ratelimit.rs  store.rs
crolens-api/src/infra/: config.rs  db.rs  logging.rs  mod.rs  multicall.rs  price.rs  rpc.rs  structured_log.rs  tenderly.rs  token.rs  x402.rs
crolens-api/src/mcp/: mod.rs  protocol.rs  router.rs  tools.rs
crolens-api/tests/: auth_tests.rs  billing_tests.rs  e2e_tools.rs  mcp_protocol.rs  ratelimit_tests.rs  tools_integration.rs
crolens-api/tests/integration/: lib.sh  mock_rpc_server.js  run_all.sh  setup.sh  teardown.sh  test_auth.sh  test_health.sh  test_mcp_tools.sh  test_performance.sh  test_rate_limit.sh  test_security_headers.sh  test_x402_flow.sh
crolens-api/tests/support/: mod.rs
(+79 files in other folders)
